# openstat

./: .gitignore  LICENSE  README.md  REFACTOR_GUIDE.md  pyproject.toml
packaging/: README.md
packaging/linux/: build_appimage.sh
packaging/macos/: build_dmg.sh
packaging/windows/: build_msi.ps1  openstats.wxs.template
plugins/example_zscore/: README.md  manifest.json  plugin.py
