[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstats"
version = "0.1.0"
description = "Plateforme analytique desktop native — Elmas Labs"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Elmas Labs" }]

dependencies = [
    # UI native
    "PySide6==6.7.2",
    "pyqtgraph==0.13.7",
    "qtawesome==1.4.2",

    # Core data engine
    "duckdb==1.1.3",
    "pyarrow==18.1.0",
    "pandas==2.2.3",
    "polars==1.12.0",
    "numpy==1.26.4",

    # Ingestion
    "openpyxl==3.1.5",
    "chardet==5.2.0",

    # Statistics / Econometrics
    "scipy==1.14.1",
    "statsmodels==0.14.4",
    "linearmodels==6.1",
    "arch==7.0.0",

    # Machine learning core
    "scikit-learn==1.5.2",
    "joblib==1.4.2",

    # Visualization
    "matplotlib==3.9.2",

    # LLM / HTTP
    "httpx==0.27.2",

    # Sandbox security
    "RestrictedPython==7.2",

    # Local encryption
    "cryptography==43.0.1",

    # Reporting
    "reportlab==4.2.5",
    "jinja2==3.1.4",

    # Serialization / Config
    "orjson==3.10.7",

    # System monitoring
    "psutil==6.0.0",

    # Validation / Logging / Paths
    "pydantic==2.9.2",
    "structlog==24.4.0",
    "platformdirs==4.3.6",
]

[project.optional-dependencies]
ml = [
    "xgboost==2.1.1",
    "lightgbm==4.5.0",
    "shap==0.46.0",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
charts-pg = [
    "pyqtgraph>=0.13",
]
packaging = [
    "pyinstaller>=6.6",
]
all = [
    "pyqtgraph>=0.13",
]

[project.scripts]
openstats = "openstats.__main__:main"

[project.gui-scripts]
openstats-gui = "openstats.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openstats = [
    "ui/qml/**/*.qml",
    "resources/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"